# Simulation

./: .gitignore  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml
src/simulation/: __init__.py  actions.py  config.py  controler.py  entities.py  exceptions.py  factories.py  factory.py  find_path.py  main.py  points.py  renderer.py  simulation.py  state.py  turns.py  world.py
src/simulation/actions/: __init__.py  base.py  interval.py  spawn.py  turn.py
src/simulation/find_path/: __init__.py  astar.py  bfs.py
src/simulation/presentation/: __init__.py  console.py  controler.py  renderer.py  state.py
src/simulation/turns/: __init__.py  attack.py  base.py  eat.py  move.py  starve.py
