[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation"
version = "0.1.0"
authors = [
    {name = "Ageev Maxim", email = "maksim170901@gmail.com"},
]
description = "Simulation World"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]


[project.optional-dependencies]
dev = [
    "mypy==1.11.2",
    "ruff==0.6.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
enable_error_code = "explicit-override"
enable_incomplete_feature = 'NewGenericSyntax'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "TRY002",
  "RUF001",
  "D",
  "S",
  "ANN",
  "TRY003",
  "EM",
  "RSE102",
  "RET504",
  "ISC001",
  "COM812"
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

"renderer.py" = ["T201"]
